<resources>
    <string name="app_name">HomeWork</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hw">Home Work</string>

    <string name="drawer_class">我的班级</string>
    <string name="drawer_message">我的消息</string>
    <string name="drawer_info">我的信息</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_about">关于</string>

    <string name="finish_load">加载完毕~</string>
    <string name="login">登陆</string>
    <string name="out">退出登录</string>
    <string name="readme">https://github.com/Zane96/EasyHomeWork/blob/master/README.md</string>
    <string name="homework">https://github.com/Zane96/EasyHomeWork</string>
    <string name="teachername">夏英</string>
</resources>
